// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StackedAreaGraph> renders with both snap and section8 1`] = `
<StackedAreaGraph
  activePrograms={
    Array [
      "snap",
      "section8",
    ]
  }
  client={
    Immutable.Map {
      USState: "MA",
      current: Immutable.Map {
        otherExpensesCareProducts: 0,
        otherMedical: 0,
        otherExpensesPhone: 0,
        workersComp: 0,
        childOtherCare: 0,
        earnedBecauseOfAdultCare: 0,
        SSDI: 0,
        unemployment: 0,
        otherExpensesOther: 0,
        childBeforeAndAfterSchoolCare: 0,
        rentShare: 0,
        otherExpensesMedical: 0,
        adultTransportation: 0,
        adultOtherCare: 0,
        earnedBecauseOfChildCare: 0,
        childTransportation: 0,
        otherExpensesFood: 0,
        SSI: 0,
        alimony: 0,
        contractRent: 0,
        socialSecurity: 0,
        phone: false,
        fuelAssistance: false,
        pension: 0,
        childSupportPaidOut: 0,
        otherExpensesCable: 0,
        disabledAssistance: 0,
        nonHeatElectricity: false,
        adultDirectCare: 0,
        disabledMedical: 0,
        childDirectCare: 0,
        propertyTax: 0,
        wantsToSeeOtherExpenses: false,
        earned: 100,
        climateControl: false,
        TAFDC: 0,
        childSupportIn: 0,
        otherIncome: 0,
        rent: 0,
        mortgage: 0,
        benefits: Immutable.Set [
        ],
        otherExpensesEntertainment: 0,
        housingInsurance: 0,
        otherExpensesClothes: 0,
        housing: "homeless",
        otherExpensesTransport: 0,
        otherExpensesUtilities: 0,
        household: Immutable.List [
          Immutable.Map {
            m_age: 30,
            m_role: "head",
            m_disabled: false,
          },
        ],
      },
      future: Immutable.Map {
        otherExpensesCareProducts: 0,
        otherMedical: 0,
        otherExpensesPhone: 0,
        workersComp: 0,
        childOtherCare: 0,
        earnedBecauseOfAdultCare: 0,
        SSDI: 0,
        unemployment: 0,
        otherExpensesOther: 0,
        childBeforeAndAfterSchoolCare: 0,
        rentShare: 0,
        otherExpensesMedical: 0,
        adultTransportation: 0,
        adultOtherCare: 0,
        earnedBecauseOfChildCare: 0,
        childTransportation: 0,
        otherExpensesFood: 0,
        SSI: 0,
        alimony: 0,
        contractRent: 0,
        socialSecurity: 0,
        phone: false,
        fuelAssistance: false,
        pension: 0,
        childSupportPaidOut: 0,
        otherExpensesCable: 0,
        disabledAssistance: 0,
        nonHeatElectricity: false,
        adultDirectCare: 0,
        disabledMedical: 0,
        childDirectCare: 0,
        propertyTax: 0,
        wantsToSeeOtherExpenses: false,
        earned: 200,
        climateControl: false,
        TAFDC: 0,
        childSupportIn: 0,
        otherIncome: 0,
        rent: 0,
        mortgage: 0,
        benefits: Immutable.Set [
        ],
        otherExpensesEntertainment: 0,
        housingInsurance: 0,
        otherExpensesClothes: 0,
        housing: "homeless",
        otherExpensesTransport: 0,
        otherExpensesUtilities: 0,
        household: Immutable.List [
          Immutable.Map {
            m_age: 30,
            m_role: "head",
            m_disabled: false,
          },
        ],
      },
    }
  }
  timescale="Monthly"
>
  <Line
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": "rgb(136, 187, 236)",
            "borderColor": "rgb(136, 187, 236)",
            "data": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
            "fill": "origin",
            "label": "Earned",
          },
          Object {
            "backgroundColor": "rgba(101, 47, 138, 1)",
            "borderColor": "rgba(101, 47, 138, 1)",
            "data": Array [
              192,
              192,
              192,
              192,
              192,
              174.9,
              153.3,
              131.7,
              110.10000000000001,
              88.5,
              66.9,
              45.30000000000001,
              23.700000000000017,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "label": "SNAP",
          },
          Object {
            "backgroundColor": "rgba(206, 203, 61, 1)",
            "borderColor": "rgba(206, 203, 61, 1)",
            "data": Array [
              30,
              3,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "label": "Section 8 Housing",
          },
        ],
        "labels": Array [
          0,
          90,
          180,
          270,
          360,
          450,
          540,
          630,
          720,
          810,
          900,
          990,
          1080,
          1170,
          1260,
          1350,
          1440,
          1530,
          1620,
          1710,
          1800,
          1890,
          1980,
          2070,
          2160,
          2250,
          2340,
          2430,
          2520,
          2610,
          2700,
          2790,
          2880,
          2970,
          3060,
          3150,
          3240,
          3330,
          3420,
          3510,
          3600,
          3690,
          3780,
          3870,
          3960,
          4050,
          4140,
          4230,
          4320,
          4410,
          4500,
          4590,
          4680,
          4770,
          4860,
          4950,
          5040,
          5130,
          5220,
          5310,
          5400,
          5490,
          5580,
          5670,
          5760,
          5850,
          5940,
          6030,
          6120,
          6210,
          6300,
          6390,
          6480,
          6570,
          6660,
          6750,
          6840,
          6930,
          7020,
          7110,
          7200,
          7290,
          7380,
          7470,
          7560,
          7650,
          7740,
          7830,
          7920,
          8010,
          8100,
          8190,
          8280,
          8370,
          8460,
        ],
      }
    }
    options={
      Object {
        "elements": Object {
          "line": Object {
            "fill": "-1",
          },
          "point": Object {
            "hitRadius": 10,
            "hoverRadius": 10,
            "radius": 0,
          },
        },
        "scales": Object {
          "xAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Monthly Earned ($)",
              },
              "stacked": true,
              "ticks": Object {
                "callback": [Function],
              },
            },
          ],
          "yAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Total Money Coming In ($)",
              },
              "stacked": true,
              "ticks": Object {
                "beginAtZero": true,
                "callback": [Function],
              },
            },
          ],
        },
        "title": Object {
          "display": true,
          "text": "All Money Coming in as Pay Changes",
        },
        "tooltips": Object {
          "callbacks": Object {
            "label": [Function],
            "title": [Function],
          },
        },
      }
    }
    plugins={
      Array [
        VerticalLine {
          "afterDatasetsDraw": [Function],
          "earned": 200,
          "xRange": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        },
      ]
    }
    redraw={true}
  >
    <LineMock
      data={
        Object {
          "datasets": Array [
            Object {
              "backgroundColor": "rgb(136, 187, 236)",
              "borderColor": "rgb(136, 187, 236)",
              "data": Array [
                0,
                90,
                180,
                270,
                360,
                450,
                540,
                630,
                720,
                810,
                900,
                990,
                1080,
                1170,
                1260,
                1350,
                1440,
                1530,
                1620,
                1710,
                1800,
                1890,
                1980,
                2070,
                2160,
                2250,
                2340,
                2430,
                2520,
                2610,
                2700,
                2790,
                2880,
                2970,
                3060,
                3150,
                3240,
                3330,
                3420,
                3510,
                3600,
                3690,
                3780,
                3870,
                3960,
                4050,
                4140,
                4230,
                4320,
                4410,
                4500,
                4590,
                4680,
                4770,
                4860,
                4950,
                5040,
                5130,
                5220,
                5310,
                5400,
                5490,
                5580,
                5670,
                5760,
                5850,
                5940,
                6030,
                6120,
                6210,
                6300,
                6390,
                6480,
                6570,
                6660,
                6750,
                6840,
                6930,
                7020,
                7110,
                7200,
                7290,
                7380,
                7470,
                7560,
                7650,
                7740,
                7830,
                7920,
                8010,
                8100,
                8190,
                8280,
                8370,
                8460,
              ],
              "fill": "origin",
              "label": "Earned",
            },
            Object {
              "backgroundColor": "rgba(101, 47, 138, 1)",
              "borderColor": "rgba(101, 47, 138, 1)",
              "data": Array [
                192,
                192,
                192,
                192,
                192,
                174.9,
                153.3,
                131.7,
                110.10000000000001,
                88.5,
                66.9,
                45.30000000000001,
                23.700000000000017,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "label": "SNAP",
            },
            Object {
              "backgroundColor": "rgba(206, 203, 61, 1)",
              "borderColor": "rgba(206, 203, 61, 1)",
              "data": Array [
                30,
                3,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "label": "Section 8 Housing",
            },
          ],
          "labels": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        }
      }
      options={
        Object {
          "elements": Object {
            "line": Object {
              "fill": "-1",
            },
            "point": Object {
              "hitRadius": 10,
              "hoverRadius": 10,
              "radius": 0,
            },
          },
          "scales": Object {
            "xAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Monthly Earned ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "callback": [Function],
                },
              },
            ],
            "yAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Total Money Coming In ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "beginAtZero": true,
                  "callback": [Function],
                },
              },
            ],
          },
          "title": Object {
            "display": true,
            "text": "All Money Coming in as Pay Changes",
          },
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
      plugins={
        Array [
          VerticalLine {
            "afterDatasetsDraw": [Function],
            "earned": 200,
            "xRange": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
          },
        ]
      }
      redraw={true}
    />
  </Line>
</StackedAreaGraph>
`;

exports[`<StackedAreaGraph> renders with section8 1`] = `
<StackedAreaGraph
  activePrograms={
    Array [
      "section8",
    ]
  }
  client={
    Immutable.Map {
      USState: "MA",
      current: Immutable.Map {
        otherExpensesCareProducts: 0,
        otherMedical: 0,
        otherExpensesPhone: 0,
        workersComp: 0,
        childOtherCare: 0,
        earnedBecauseOfAdultCare: 0,
        SSDI: 0,
        unemployment: 0,
        otherExpensesOther: 0,
        childBeforeAndAfterSchoolCare: 0,
        rentShare: 0,
        otherExpensesMedical: 0,
        adultTransportation: 0,
        adultOtherCare: 0,
        earnedBecauseOfChildCare: 0,
        childTransportation: 0,
        otherExpensesFood: 0,
        SSI: 0,
        alimony: 0,
        contractRent: 0,
        socialSecurity: 0,
        phone: false,
        fuelAssistance: false,
        pension: 0,
        childSupportPaidOut: 0,
        otherExpensesCable: 0,
        disabledAssistance: 0,
        nonHeatElectricity: false,
        adultDirectCare: 0,
        disabledMedical: 0,
        childDirectCare: 0,
        propertyTax: 0,
        wantsToSeeOtherExpenses: false,
        earned: 100,
        climateControl: false,
        TAFDC: 0,
        childSupportIn: 0,
        otherIncome: 0,
        rent: 0,
        mortgage: 0,
        benefits: Immutable.Set [
        ],
        otherExpensesEntertainment: 0,
        housingInsurance: 0,
        otherExpensesClothes: 0,
        housing: "homeless",
        otherExpensesTransport: 0,
        otherExpensesUtilities: 0,
        household: Immutable.List [
          Immutable.Map {
            m_age: 30,
            m_role: "head",
            m_disabled: false,
          },
        ],
      },
      future: Immutable.Map {
        otherExpensesCareProducts: 0,
        otherMedical: 0,
        otherExpensesPhone: 0,
        workersComp: 0,
        childOtherCare: 0,
        earnedBecauseOfAdultCare: 0,
        SSDI: 0,
        unemployment: 0,
        otherExpensesOther: 0,
        childBeforeAndAfterSchoolCare: 0,
        rentShare: 0,
        otherExpensesMedical: 0,
        adultTransportation: 0,
        adultOtherCare: 0,
        earnedBecauseOfChildCare: 0,
        childTransportation: 0,
        otherExpensesFood: 0,
        SSI: 0,
        alimony: 0,
        contractRent: 0,
        socialSecurity: 0,
        phone: false,
        fuelAssistance: false,
        pension: 0,
        childSupportPaidOut: 0,
        otherExpensesCable: 0,
        disabledAssistance: 0,
        nonHeatElectricity: false,
        adultDirectCare: 0,
        disabledMedical: 0,
        childDirectCare: 0,
        propertyTax: 0,
        wantsToSeeOtherExpenses: false,
        earned: 200,
        climateControl: false,
        TAFDC: 0,
        childSupportIn: 0,
        otherIncome: 0,
        rent: 0,
        mortgage: 0,
        benefits: Immutable.Set [
        ],
        otherExpensesEntertainment: 0,
        housingInsurance: 0,
        otherExpensesClothes: 0,
        housing: "homeless",
        otherExpensesTransport: 0,
        otherExpensesUtilities: 0,
        household: Immutable.List [
          Immutable.Map {
            m_age: 30,
            m_role: "head",
            m_disabled: false,
          },
        ],
      },
    }
  }
  timescale="Monthly"
>
  <Line
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": "rgb(136, 187, 236)",
            "borderColor": "rgb(136, 187, 236)",
            "data": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
            "fill": "origin",
            "label": "Earned",
          },
          Object {
            "backgroundColor": "rgba(206, 203, 61, 1)",
            "borderColor": "rgba(206, 203, 61, 1)",
            "data": Array [
              30,
              3,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "label": "Section 8 Housing",
          },
        ],
        "labels": Array [
          0,
          90,
          180,
          270,
          360,
          450,
          540,
          630,
          720,
          810,
          900,
          990,
          1080,
          1170,
          1260,
          1350,
          1440,
          1530,
          1620,
          1710,
          1800,
          1890,
          1980,
          2070,
          2160,
          2250,
          2340,
          2430,
          2520,
          2610,
          2700,
          2790,
          2880,
          2970,
          3060,
          3150,
          3240,
          3330,
          3420,
          3510,
          3600,
          3690,
          3780,
          3870,
          3960,
          4050,
          4140,
          4230,
          4320,
          4410,
          4500,
          4590,
          4680,
          4770,
          4860,
          4950,
          5040,
          5130,
          5220,
          5310,
          5400,
          5490,
          5580,
          5670,
          5760,
          5850,
          5940,
          6030,
          6120,
          6210,
          6300,
          6390,
          6480,
          6570,
          6660,
          6750,
          6840,
          6930,
          7020,
          7110,
          7200,
          7290,
          7380,
          7470,
          7560,
          7650,
          7740,
          7830,
          7920,
          8010,
          8100,
          8190,
          8280,
          8370,
          8460,
        ],
      }
    }
    options={
      Object {
        "elements": Object {
          "line": Object {
            "fill": "-1",
          },
          "point": Object {
            "hitRadius": 10,
            "hoverRadius": 10,
            "radius": 0,
          },
        },
        "scales": Object {
          "xAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Monthly Earned ($)",
              },
              "stacked": true,
              "ticks": Object {
                "callback": [Function],
              },
            },
          ],
          "yAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Total Money Coming In ($)",
              },
              "stacked": true,
              "ticks": Object {
                "beginAtZero": true,
                "callback": [Function],
              },
            },
          ],
        },
        "title": Object {
          "display": true,
          "text": "All Money Coming in as Pay Changes",
        },
        "tooltips": Object {
          "callbacks": Object {
            "label": [Function],
            "title": [Function],
          },
        },
      }
    }
    plugins={
      Array [
        VerticalLine {
          "afterDatasetsDraw": [Function],
          "earned": 200,
          "xRange": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        },
      ]
    }
    redraw={true}
  >
    <LineMock
      data={
        Object {
          "datasets": Array [
            Object {
              "backgroundColor": "rgb(136, 187, 236)",
              "borderColor": "rgb(136, 187, 236)",
              "data": Array [
                0,
                90,
                180,
                270,
                360,
                450,
                540,
                630,
                720,
                810,
                900,
                990,
                1080,
                1170,
                1260,
                1350,
                1440,
                1530,
                1620,
                1710,
                1800,
                1890,
                1980,
                2070,
                2160,
                2250,
                2340,
                2430,
                2520,
                2610,
                2700,
                2790,
                2880,
                2970,
                3060,
                3150,
                3240,
                3330,
                3420,
                3510,
                3600,
                3690,
                3780,
                3870,
                3960,
                4050,
                4140,
                4230,
                4320,
                4410,
                4500,
                4590,
                4680,
                4770,
                4860,
                4950,
                5040,
                5130,
                5220,
                5310,
                5400,
                5490,
                5580,
                5670,
                5760,
                5850,
                5940,
                6030,
                6120,
                6210,
                6300,
                6390,
                6480,
                6570,
                6660,
                6750,
                6840,
                6930,
                7020,
                7110,
                7200,
                7290,
                7380,
                7470,
                7560,
                7650,
                7740,
                7830,
                7920,
                8010,
                8100,
                8190,
                8280,
                8370,
                8460,
              ],
              "fill": "origin",
              "label": "Earned",
            },
            Object {
              "backgroundColor": "rgba(206, 203, 61, 1)",
              "borderColor": "rgba(206, 203, 61, 1)",
              "data": Array [
                30,
                3,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "label": "Section 8 Housing",
            },
          ],
          "labels": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        }
      }
      options={
        Object {
          "elements": Object {
            "line": Object {
              "fill": "-1",
            },
            "point": Object {
              "hitRadius": 10,
              "hoverRadius": 10,
              "radius": 0,
            },
          },
          "scales": Object {
            "xAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Monthly Earned ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "callback": [Function],
                },
              },
            ],
            "yAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Total Money Coming In ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "beginAtZero": true,
                  "callback": [Function],
                },
              },
            ],
          },
          "title": Object {
            "display": true,
            "text": "All Money Coming in as Pay Changes",
          },
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
      plugins={
        Array [
          VerticalLine {
            "afterDatasetsDraw": [Function],
            "earned": 200,
            "xRange": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
          },
        ]
      }
      redraw={true}
    />
  </Line>
</StackedAreaGraph>
`;

exports[`<StackedAreaGraph> renders with snap and current earned greater than future earned 1`] = `
<StackedAreaGraph
  activePrograms={
    Array [
      "snap",
    ]
  }
  client={
    Immutable.Map {
      USState: "MA",
      current: Immutable.Map {
        otherExpensesCareProducts: 0,
        otherMedical: 0,
        otherExpensesPhone: 0,
        workersComp: 0,
        childOtherCare: 0,
        earnedBecauseOfAdultCare: 0,
        SSDI: 0,
        unemployment: 0,
        otherExpensesOther: 0,
        childBeforeAndAfterSchoolCare: 0,
        rentShare: 0,
        otherExpensesMedical: 0,
        adultTransportation: 0,
        adultOtherCare: 0,
        earnedBecauseOfChildCare: 0,
        childTransportation: 0,
        otherExpensesFood: 0,
        SSI: 0,
        alimony: 0,
        contractRent: 0,
        socialSecurity: 0,
        phone: false,
        fuelAssistance: false,
        pension: 0,
        childSupportPaidOut: 0,
        otherExpensesCable: 0,
        disabledAssistance: 0,
        nonHeatElectricity: false,
        adultDirectCare: 0,
        disabledMedical: 0,
        childDirectCare: 0,
        propertyTax: 0,
        wantsToSeeOtherExpenses: false,
        earned: 200,
        climateControl: false,
        TAFDC: 0,
        childSupportIn: 0,
        otherIncome: 0,
        rent: 0,
        mortgage: 0,
        benefits: Immutable.Set [
        ],
        otherExpensesEntertainment: 0,
        housingInsurance: 0,
        otherExpensesClothes: 0,
        housing: "homeless",
        otherExpensesTransport: 0,
        otherExpensesUtilities: 0,
        household: Immutable.List [
          Immutable.Map {
            m_age: 30,
            m_role: "head",
            m_disabled: false,
          },
        ],
      },
      future: Immutable.Map {
        otherExpensesCareProducts: 0,
        otherMedical: 0,
        otherExpensesPhone: 0,
        workersComp: 0,
        childOtherCare: 0,
        earnedBecauseOfAdultCare: 0,
        SSDI: 0,
        unemployment: 0,
        otherExpensesOther: 0,
        childBeforeAndAfterSchoolCare: 0,
        rentShare: 0,
        otherExpensesMedical: 0,
        adultTransportation: 0,
        adultOtherCare: 0,
        earnedBecauseOfChildCare: 0,
        childTransportation: 0,
        otherExpensesFood: 0,
        SSI: 0,
        alimony: 0,
        contractRent: 0,
        socialSecurity: 0,
        phone: false,
        fuelAssistance: false,
        pension: 0,
        childSupportPaidOut: 0,
        otherExpensesCable: 0,
        disabledAssistance: 0,
        nonHeatElectricity: false,
        adultDirectCare: 0,
        disabledMedical: 0,
        childDirectCare: 0,
        propertyTax: 0,
        wantsToSeeOtherExpenses: false,
        earned: 100,
        climateControl: false,
        TAFDC: 0,
        childSupportIn: 0,
        otherIncome: 0,
        rent: 0,
        mortgage: 0,
        benefits: Immutable.Set [
        ],
        otherExpensesEntertainment: 0,
        housingInsurance: 0,
        otherExpensesClothes: 0,
        housing: "homeless",
        otherExpensesTransport: 0,
        otherExpensesUtilities: 0,
        household: Immutable.List [
          Immutable.Map {
            m_age: 30,
            m_role: "head",
            m_disabled: false,
          },
        ],
      },
    }
  }
  timescale="Monthly"
>
  <Line
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": "rgb(136, 187, 236)",
            "borderColor": "rgb(136, 187, 236)",
            "data": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
            "fill": "origin",
            "label": "Earned",
          },
          Object {
            "backgroundColor": "rgba(101, 47, 138, 1)",
            "borderColor": "rgba(101, 47, 138, 1)",
            "data": Array [
              192,
              192,
              192,
              192,
              192,
              174.9,
              153.3,
              131.7,
              110.10000000000001,
              88.5,
              66.9,
              45.30000000000001,
              23.700000000000017,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "label": "SNAP",
          },
        ],
        "labels": Array [
          0,
          90,
          180,
          270,
          360,
          450,
          540,
          630,
          720,
          810,
          900,
          990,
          1080,
          1170,
          1260,
          1350,
          1440,
          1530,
          1620,
          1710,
          1800,
          1890,
          1980,
          2070,
          2160,
          2250,
          2340,
          2430,
          2520,
          2610,
          2700,
          2790,
          2880,
          2970,
          3060,
          3150,
          3240,
          3330,
          3420,
          3510,
          3600,
          3690,
          3780,
          3870,
          3960,
          4050,
          4140,
          4230,
          4320,
          4410,
          4500,
          4590,
          4680,
          4770,
          4860,
          4950,
          5040,
          5130,
          5220,
          5310,
          5400,
          5490,
          5580,
          5670,
          5760,
          5850,
          5940,
          6030,
          6120,
          6210,
          6300,
          6390,
          6480,
          6570,
          6660,
          6750,
          6840,
          6930,
          7020,
          7110,
          7200,
          7290,
          7380,
          7470,
          7560,
          7650,
          7740,
          7830,
          7920,
          8010,
          8100,
          8190,
          8280,
          8370,
          8460,
        ],
      }
    }
    options={
      Object {
        "elements": Object {
          "line": Object {
            "fill": "-1",
          },
          "point": Object {
            "hitRadius": 10,
            "hoverRadius": 10,
            "radius": 0,
          },
        },
        "scales": Object {
          "xAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Monthly Earned ($)",
              },
              "stacked": true,
              "ticks": Object {
                "callback": [Function],
              },
            },
          ],
          "yAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Total Money Coming In ($)",
              },
              "stacked": true,
              "ticks": Object {
                "beginAtZero": true,
                "callback": [Function],
              },
            },
          ],
        },
        "title": Object {
          "display": true,
          "text": "All Money Coming in as Pay Changes",
        },
        "tooltips": Object {
          "callbacks": Object {
            "label": [Function],
            "title": [Function],
          },
        },
      }
    }
    plugins={
      Array [
        VerticalLine {
          "afterDatasetsDraw": [Function],
          "earned": 100,
          "xRange": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        },
      ]
    }
    redraw={true}
  >
    <LineMock
      data={
        Object {
          "datasets": Array [
            Object {
              "backgroundColor": "rgb(136, 187, 236)",
              "borderColor": "rgb(136, 187, 236)",
              "data": Array [
                0,
                90,
                180,
                270,
                360,
                450,
                540,
                630,
                720,
                810,
                900,
                990,
                1080,
                1170,
                1260,
                1350,
                1440,
                1530,
                1620,
                1710,
                1800,
                1890,
                1980,
                2070,
                2160,
                2250,
                2340,
                2430,
                2520,
                2610,
                2700,
                2790,
                2880,
                2970,
                3060,
                3150,
                3240,
                3330,
                3420,
                3510,
                3600,
                3690,
                3780,
                3870,
                3960,
                4050,
                4140,
                4230,
                4320,
                4410,
                4500,
                4590,
                4680,
                4770,
                4860,
                4950,
                5040,
                5130,
                5220,
                5310,
                5400,
                5490,
                5580,
                5670,
                5760,
                5850,
                5940,
                6030,
                6120,
                6210,
                6300,
                6390,
                6480,
                6570,
                6660,
                6750,
                6840,
                6930,
                7020,
                7110,
                7200,
                7290,
                7380,
                7470,
                7560,
                7650,
                7740,
                7830,
                7920,
                8010,
                8100,
                8190,
                8280,
                8370,
                8460,
              ],
              "fill": "origin",
              "label": "Earned",
            },
            Object {
              "backgroundColor": "rgba(101, 47, 138, 1)",
              "borderColor": "rgba(101, 47, 138, 1)",
              "data": Array [
                192,
                192,
                192,
                192,
                192,
                174.9,
                153.3,
                131.7,
                110.10000000000001,
                88.5,
                66.9,
                45.30000000000001,
                23.700000000000017,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "label": "SNAP",
            },
          ],
          "labels": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        }
      }
      options={
        Object {
          "elements": Object {
            "line": Object {
              "fill": "-1",
            },
            "point": Object {
              "hitRadius": 10,
              "hoverRadius": 10,
              "radius": 0,
            },
          },
          "scales": Object {
            "xAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Monthly Earned ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "callback": [Function],
                },
              },
            ],
            "yAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Total Money Coming In ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "beginAtZero": true,
                  "callback": [Function],
                },
              },
            ],
          },
          "title": Object {
            "display": true,
            "text": "All Money Coming in as Pay Changes",
          },
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
      plugins={
        Array [
          VerticalLine {
            "afterDatasetsDraw": [Function],
            "earned": 100,
            "xRange": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
          },
        ]
      }
      redraw={true}
    />
  </Line>
</StackedAreaGraph>
`;

exports[`<StackedAreaGraph> renders with snap and current earned less than future earned 1`] = `
<StackedAreaGraph
  activePrograms={
    Array [
      "snap",
    ]
  }
  client={
    Immutable.Map {
      USState: "MA",
      current: Immutable.Map {
        otherExpensesCareProducts: 0,
        otherMedical: 0,
        otherExpensesPhone: 0,
        workersComp: 0,
        childOtherCare: 0,
        earnedBecauseOfAdultCare: 0,
        SSDI: 0,
        unemployment: 0,
        otherExpensesOther: 0,
        childBeforeAndAfterSchoolCare: 0,
        rentShare: 0,
        otherExpensesMedical: 0,
        adultTransportation: 0,
        adultOtherCare: 0,
        earnedBecauseOfChildCare: 0,
        childTransportation: 0,
        otherExpensesFood: 0,
        SSI: 0,
        alimony: 0,
        contractRent: 0,
        socialSecurity: 0,
        phone: false,
        fuelAssistance: false,
        pension: 0,
        childSupportPaidOut: 0,
        otherExpensesCable: 0,
        disabledAssistance: 0,
        nonHeatElectricity: false,
        adultDirectCare: 0,
        disabledMedical: 0,
        childDirectCare: 0,
        propertyTax: 0,
        wantsToSeeOtherExpenses: false,
        earned: 100,
        climateControl: false,
        TAFDC: 0,
        childSupportIn: 0,
        otherIncome: 0,
        rent: 0,
        mortgage: 0,
        benefits: Immutable.Set [
        ],
        otherExpensesEntertainment: 0,
        housingInsurance: 0,
        otherExpensesClothes: 0,
        housing: "homeless",
        otherExpensesTransport: 0,
        otherExpensesUtilities: 0,
        household: Immutable.List [
          Immutable.Map {
            m_age: 30,
            m_role: "head",
            m_disabled: false,
          },
        ],
      },
      future: Immutable.Map {
        otherExpensesCareProducts: 0,
        otherMedical: 0,
        otherExpensesPhone: 0,
        workersComp: 0,
        childOtherCare: 0,
        earnedBecauseOfAdultCare: 0,
        SSDI: 0,
        unemployment: 0,
        otherExpensesOther: 0,
        childBeforeAndAfterSchoolCare: 0,
        rentShare: 0,
        otherExpensesMedical: 0,
        adultTransportation: 0,
        adultOtherCare: 0,
        earnedBecauseOfChildCare: 0,
        childTransportation: 0,
        otherExpensesFood: 0,
        SSI: 0,
        alimony: 0,
        contractRent: 0,
        socialSecurity: 0,
        phone: false,
        fuelAssistance: false,
        pension: 0,
        childSupportPaidOut: 0,
        otherExpensesCable: 0,
        disabledAssistance: 0,
        nonHeatElectricity: false,
        adultDirectCare: 0,
        disabledMedical: 0,
        childDirectCare: 0,
        propertyTax: 0,
        wantsToSeeOtherExpenses: false,
        earned: 200,
        climateControl: false,
        TAFDC: 0,
        childSupportIn: 0,
        otherIncome: 0,
        rent: 0,
        mortgage: 0,
        benefits: Immutable.Set [
        ],
        otherExpensesEntertainment: 0,
        housingInsurance: 0,
        otherExpensesClothes: 0,
        housing: "homeless",
        otherExpensesTransport: 0,
        otherExpensesUtilities: 0,
        household: Immutable.List [
          Immutable.Map {
            m_age: 30,
            m_role: "head",
            m_disabled: false,
          },
        ],
      },
    }
  }
  timescale="Monthly"
>
  <Line
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": "rgb(136, 187, 236)",
            "borderColor": "rgb(136, 187, 236)",
            "data": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
            "fill": "origin",
            "label": "Earned",
          },
          Object {
            "backgroundColor": "rgba(101, 47, 138, 1)",
            "borderColor": "rgba(101, 47, 138, 1)",
            "data": Array [
              192,
              192,
              192,
              192,
              192,
              174.9,
              153.3,
              131.7,
              110.10000000000001,
              88.5,
              66.9,
              45.30000000000001,
              23.700000000000017,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "label": "SNAP",
          },
        ],
        "labels": Array [
          0,
          90,
          180,
          270,
          360,
          450,
          540,
          630,
          720,
          810,
          900,
          990,
          1080,
          1170,
          1260,
          1350,
          1440,
          1530,
          1620,
          1710,
          1800,
          1890,
          1980,
          2070,
          2160,
          2250,
          2340,
          2430,
          2520,
          2610,
          2700,
          2790,
          2880,
          2970,
          3060,
          3150,
          3240,
          3330,
          3420,
          3510,
          3600,
          3690,
          3780,
          3870,
          3960,
          4050,
          4140,
          4230,
          4320,
          4410,
          4500,
          4590,
          4680,
          4770,
          4860,
          4950,
          5040,
          5130,
          5220,
          5310,
          5400,
          5490,
          5580,
          5670,
          5760,
          5850,
          5940,
          6030,
          6120,
          6210,
          6300,
          6390,
          6480,
          6570,
          6660,
          6750,
          6840,
          6930,
          7020,
          7110,
          7200,
          7290,
          7380,
          7470,
          7560,
          7650,
          7740,
          7830,
          7920,
          8010,
          8100,
          8190,
          8280,
          8370,
          8460,
        ],
      }
    }
    options={
      Object {
        "elements": Object {
          "line": Object {
            "fill": "-1",
          },
          "point": Object {
            "hitRadius": 10,
            "hoverRadius": 10,
            "radius": 0,
          },
        },
        "scales": Object {
          "xAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Monthly Earned ($)",
              },
              "stacked": true,
              "ticks": Object {
                "callback": [Function],
              },
            },
          ],
          "yAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Total Money Coming In ($)",
              },
              "stacked": true,
              "ticks": Object {
                "beginAtZero": true,
                "callback": [Function],
              },
            },
          ],
        },
        "title": Object {
          "display": true,
          "text": "All Money Coming in as Pay Changes",
        },
        "tooltips": Object {
          "callbacks": Object {
            "label": [Function],
            "title": [Function],
          },
        },
      }
    }
    plugins={
      Array [
        VerticalLine {
          "afterDatasetsDraw": [Function],
          "earned": 200,
          "xRange": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        },
      ]
    }
    redraw={true}
  >
    <LineMock
      data={
        Object {
          "datasets": Array [
            Object {
              "backgroundColor": "rgb(136, 187, 236)",
              "borderColor": "rgb(136, 187, 236)",
              "data": Array [
                0,
                90,
                180,
                270,
                360,
                450,
                540,
                630,
                720,
                810,
                900,
                990,
                1080,
                1170,
                1260,
                1350,
                1440,
                1530,
                1620,
                1710,
                1800,
                1890,
                1980,
                2070,
                2160,
                2250,
                2340,
                2430,
                2520,
                2610,
                2700,
                2790,
                2880,
                2970,
                3060,
                3150,
                3240,
                3330,
                3420,
                3510,
                3600,
                3690,
                3780,
                3870,
                3960,
                4050,
                4140,
                4230,
                4320,
                4410,
                4500,
                4590,
                4680,
                4770,
                4860,
                4950,
                5040,
                5130,
                5220,
                5310,
                5400,
                5490,
                5580,
                5670,
                5760,
                5850,
                5940,
                6030,
                6120,
                6210,
                6300,
                6390,
                6480,
                6570,
                6660,
                6750,
                6840,
                6930,
                7020,
                7110,
                7200,
                7290,
                7380,
                7470,
                7560,
                7650,
                7740,
                7830,
                7920,
                8010,
                8100,
                8190,
                8280,
                8370,
                8460,
              ],
              "fill": "origin",
              "label": "Earned",
            },
            Object {
              "backgroundColor": "rgba(101, 47, 138, 1)",
              "borderColor": "rgba(101, 47, 138, 1)",
              "data": Array [
                192,
                192,
                192,
                192,
                192,
                174.9,
                153.3,
                131.7,
                110.10000000000001,
                88.5,
                66.9,
                45.30000000000001,
                23.700000000000017,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "label": "SNAP",
            },
          ],
          "labels": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        }
      }
      options={
        Object {
          "elements": Object {
            "line": Object {
              "fill": "-1",
            },
            "point": Object {
              "hitRadius": 10,
              "hoverRadius": 10,
              "radius": 0,
            },
          },
          "scales": Object {
            "xAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Monthly Earned ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "callback": [Function],
                },
              },
            ],
            "yAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Total Money Coming In ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "beginAtZero": true,
                  "callback": [Function],
                },
              },
            ],
          },
          "title": Object {
            "display": true,
            "text": "All Money Coming in as Pay Changes",
          },
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
      plugins={
        Array [
          VerticalLine {
            "afterDatasetsDraw": [Function],
            "earned": 200,
            "xRange": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
          },
        ]
      }
      redraw={true}
    />
  </Line>
</StackedAreaGraph>
`;
